# casidlkai_httpd

./: .gitignore  CMakeLists.txt  README.md
htdocs/: 404.html  index.html  resume.html
htdocs/css/: resume.css
include/: accept_request.h  cat.h  error_die.h  get_line.h  get_mime_type.h  headers.h  macros.h  not_found.h  server_file.h  startup.h  unimplement.h
src/: accept_request.c  cat.c  error_die.c  get_line.c  get_mime_type.c  headers.c  main.c  not_found.c  server_file.c  startup.c  unimplement.c
